@@ -8,6 +8,7 @@
 // Generated from the TEXTINCLUDE 2 resource.
 //
 #include "afxres.h"
+#include "../../ProcessHacker/include/phappres.h"
 
 /////////////////////////////////////////////////////////////////////////////
 #undef APSTUDIO_READONLY_SYMBOLS
@@ -33,6 +34,7 @@ END
 2 TEXTINCLUDE 
 BEGIN
     "#include ""afxres.h""\r\n"
+    "#include ""../../ProcessHacker/include/phappres.h""\r\n"
     "\0"
 END
 
@@ -56,41 +58,41 @@ BEGIN
     IDD_PEGENERAL, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 267
+        RIGHTMARGIN, 293
         TOPMARGIN, 7
-        BOTTOMMARGIN, 249
+        BOTTOMMARGIN, 273
     END
 
     IDD_PEIMPORTS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 267
+        RIGHTMARGIN, 293
         TOPMARGIN, 7
-        BOTTOMMARGIN, 249
+        BOTTOMMARGIN, 273
     END
 
     IDD_PEEXPORTS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 267
+        RIGHTMARGIN, 293
         TOPMARGIN, 7
-        BOTTOMMARGIN, 249
+        BOTTOMMARGIN, 273
     END
 
     IDD_LIBEXPORTS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 291
+        RIGHTMARGIN, 293
         TOPMARGIN, 7
-        BOTTOMMARGIN, 249
+        BOTTOMMARGIN, 273
     END
 
     IDD_PECLR, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 267
+        RIGHTMARGIN, 293
         TOPMARGIN, 7
-        BOTTOMMARGIN, 249
+        BOTTOMMARGIN, 273
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -101,62 +103,62 @@ END
 // Dialog
 //
 
-IDD_PEGENERAL DIALOGEX 0, 0, 274, 256
+IDD_PEGENERAL DIALOGEX 0, 0, 300, 280
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "General"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "Target machine:",IDC_STATIC,7,7,53,8
-    LTEXT           "Static",IDC_TARGETMACHINE,78,7,189,8
+    LTEXT           "Static",IDC_TARGETMACHINE,78,7,215,8
     LTEXT           "Checksum:",IDC_STATIC,7,31,36,8
-    LTEXT           "Static",IDC_CHECKSUM,78,31,189,8
+    LTEXT           "Static",IDC_CHECKSUM,78,31,215,8
     LTEXT           "Subsystem:",IDC_STATIC,7,43,38,8
     LTEXT           "Subsystem Version:",IDC_STATIC,7,55,64,8
     LTEXT           "Characteristics:",IDC_STATIC,7,67,51,8
-    LTEXT           "Static",IDC_SUBSYSTEM,78,43,189,8
-    LTEXT           "Static",IDC_SUBSYSTEMVERSION,78,55,189,8
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,94,260,155
+    LTEXT           "Static",IDC_SUBSYSTEM,78,43,215,8
+    LTEXT           "Static",IDC_SUBSYSTEMVERSION,78,55,215,8
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,94,286,179
     LTEXT           "Sections:",IDC_STATIC,7,83,30,8
-    EDITTEXT        IDC_CHARACTERISTICS,76,67,191,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_CHARACTERISTICS,76,67,217,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     LTEXT           "Time stamp:",IDC_STATIC,7,19,40,8
-    LTEXT           "Static",IDC_TIMESTAMP,78,19,189,8
+    LTEXT           "Static",IDC_TIMESTAMP,78,19,215,8
 END
 
-IDD_PEIMPORTS DIALOGEX 0, 0, 274, 256
+IDD_PEIMPORTS DIALOGEX 0, 0, 300, 280
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Imports"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,260,242
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,286,266
 END
 
-IDD_PEEXPORTS DIALOGEX 0, 0, 274, 256
+IDD_PEEXPORTS DIALOGEX 0, 0, 300, 280
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Exports"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,260,242
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,286,266
 END
 
-IDD_LIBEXPORTS DIALOGEX 0, 0, 298, 256
+IDD_LIBEXPORTS DIALOGEX 0, 0, 300, 280
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Exports"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,6,6,288,246
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,6,6,287,267
 END
 
-IDD_PECLR DIALOGEX 0, 0, 274, 256
+IDD_PECLR DIALOGEX 0, 0, 300, 280
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "CLR"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "Runtime Version:",IDC_STATIC,7,7,55,8
-    LTEXT           "Static",IDC_RUNTIMEVERSION,78,7,189,8
+    LTEXT           "Static",IDC_RUNTIMEVERSION,78,7,215,8
     LTEXT           "Flags:",IDC_STATIC,7,19,20,8
-    EDITTEXT        IDC_FLAGS,76,19,191,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_FLAGS,76,19,217,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     LTEXT           "Version String:",IDC_STATIC,7,31,48,8
-    LTEXT           "Static",IDC_VERSIONSTRING,78,31,189,8
+    LTEXT           "Static",IDC_VERSIONSTRING,78,31,215,8
 END
 
 
@@ -166,8 +168,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,0,0
- PRODUCTVERSION 1,0,0,0
+ FILEVERSION PHAPP_VERSION_MAJOR,PHAPP_VERSION_MINOR,0,PHAPP_VERSION_REVISION
+ PRODUCTVERSION PHAPP_VERSION_MAJOR,PHAPP_VERSION_MINOR,0,PHAPP_VERSION_REVISION
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -184,12 +186,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "wj32"
             VALUE "FileDescription", "PE Viewer"
-            VALUE "FileVersion", "1.0"
+            VALUE "FileVersion", PHAPP_VERSION_STRING
             VALUE "InternalName", "peview"
             VALUE "LegalCopyright", "Licensed under the GNU GPL, v3."
             VALUE "OriginalFilename", "peview.exe"
-            VALUE "ProductName", "PE Viewer"
-            VALUE "ProductVersion", "1.0"
+            VALUE "ProductName", "Process Hacker"
+            VALUE "ProductVersion", PHAPP_VERSION_STRING
         END
     END
     BLOCK "VarFileInfo"
